<resources>
    <string name="app_name">Realty Application</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="goal_estate_realty">GOAL ESTATE REALTY</string>
    <string name="identification_number">Identification Number</string>
    <string name="sign_in">Sign_In</string>
    <string name="nationality">Nationality</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create">Create</string>
    <string name="enter_password">Enter Password</string>
    <string name="surname">Surname</string>
    <string name="first_name">First Name</string>
    <string name="sign_in_to_your_account">Sign In to your account</string>
    <string name="show_password">Show Password</string>
    <string name="log_out1">Log Out</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="tenant_registration">Tenant registration</string>
    <string name="landlord_registration">Landlord registration</string>
    <string name="company_name">Company Name</string>
    <string name="registration_number">Registration Number</string>
    <string name="physical_address">Physical Address</string>
    <string name="post_office_box">Post Office Box</string>
    <string name="company_email_address">Company Email Address</string>
    <string name="verify_password">Verify Password</string>
    <string name="create_landlord">Create Landlord</string>
    <string name="existing_account">Existing account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="send">Send</string>
    <string name="messages">Messages</string>
    <string name="single">single</string>
    <string name="Notices">notices</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="chats">Chats</string>
    <string name="referees">Referees</string>
    <string name="maintenance">Maintenance</string>
    <string name="name">Name</string>
    <string name="notices">Notices</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="leases">Leases</string>
    <string name="contacts">Contacts</string>
    <string name="employer">Employer</string>
    <string name="my_contacts">My Contacts</string>
    <string name="my_leases">My Leases</string>
    <string name="my_profile">My Profile</string>
    <string name="my_employer">My Employer</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered</string>
    <string name="full_name">Full Name</string>
    <string name="create_password">Create password</string>
    <string name="edit">Edit</string>
    <string name="id_or_passport">Id or Passport</string>
    <string name="tenant_name">Tenant Name</string>
    <string name="tenant_email">Tenant Email</string>
    <string name="telephone">Telephone</string>
    <string name="identification">Identification</string>
    <string name="create_a_management_company">Create a management company</string>
</resources>
