<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_leases"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/leases" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_Employer"
            android:icon="@drawable/ic_domain_black_24dp"
            android:title="@string/employer"/>

        <item
            android:id="@+id/nav_Edit"
            android:icon="@drawable/ic_domain_black_24dp"
            android:title="@string/edit"/>



    </group>
</menu>
