<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hodiaspora.realtyapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.hodiaspora.realtyapplication.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.hodiaspora.realtyapplication.Fragments.ProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_leases"
        android:name="com.hodiaspora.realtyapplication.Fragments.LeasesFragment"
        android:label="@string/my_leases"
        tools:layout="@layout/fragment_leases" />

    <fragment
        android:id="@+id/nav_Employer"
        android:name="com.hodiaspora.realtyapplication.Fragments.EmployerFragment"
        android:label="@string/my_employer"
        tools:layout="@layout/fragment_employer" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.hodiaspora.realtyapplication.Fragments.ContactsFragment"
        android:label="@string/my_contacts"
        tools:layout="@layout/fragment_contacts" />

</navigation>