<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/apartment"
    android:orientation="vertical"
    tools:context=".AgentActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_management_company"
        android:textSize="24sp"
        android:textColor="#fff"/>

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/C_Name"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="#fff"
        android:hint="@string/company_name"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/Reg_Number"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:hint="@string/registration_number"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="16sp"/>


    <EditText
        android:id="@+id/Official_Email"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:hint="@string/company_email_address"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/C_password"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:hint="@string/create_password"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/ConfirmP"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:hint="@string/verify_password"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/CreateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_landlord"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="#000"/>

    <TextView
        android:id="@+id/GoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/existing_account"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold"/>


</LinearLayout>