<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/backgound1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center_horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/TenantImage"
            android:layout_width="120dp"
            android:layout_marginTop="20dp"
            android:layout_height="120dp"
            android:background="#add8e6"
            app:riv_corner_radius="64dp"
            app:riv_oval="true"
            android:src="@drawable/ic_add_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>




    <EditText
        android:id="@+id/Name"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:background="@drawable/edit_text_styles"
        android:inputType="textPersonName"
        android:hint="@string/full_name"/>

    <EditText
        android:id="@+id/Email"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email_address"
        android:background="@drawable/edit_text_styles"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/Identification"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:hint="@string/id_or_passport"
        android:background="@drawable/edit_text_styles" />



    <EditText
        android:id="@+id/Phone"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:background="@drawable/edit_text_styles"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/Password"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:background="@drawable/edit_text_styles"
        android:hint="@string/create_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/Cnf_Password"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:background="@drawable/edit_text_styles"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:background="@drawable/reg_btn_style"
        android:text="@string/register"/>

    <Button
        android:id="@+id/LoginPage"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/reg_btn_style"
        android:text="@string/already_registered"/>


</LinearLayout>