<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/backgound1"
    tools:context=".MainActivity"
    android:focusableInTouchMode="true">


    <EditText
        android:id="@+id/Email1"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="5dp"
        android:background="@drawable/edit_text_styles"
        android:hint="@string/enter_email_address"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="250dp"/>

    <EditText
        android:id="@+id/Password1"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="5dp"
        android:background="@drawable/edit_text_styles"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <CheckBox
        android:id="@+id/V_password"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/keep_me_signed_in"
        android:background="#fff"/>

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:background="@drawable/reg_btn_style"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Pwd_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/RegisterTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>